tests/correct/func_returntype.py.processed
def hello(test::int, hello)::int:
 @71684aa3418631a412d6105e160131b9 a = b
 @d2b3009662c463c2ab96d1a73872c6f1 