tests/error/funcinfor.py.processed
for i in hello: 
 @71684aa3418631a412d6105e160131b9 indent def hello(): a = b 
dedent
 @d2b3009662c463c2ab96d1a73872c6f1 